# RoveSoPnP_GUI

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  RoveSoPnP_GUI_en_US.ts  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qt_components_to_not_install
.devcontainer/: Ubuntu-arm64.dockerfile  Ubuntu.dockerfile  build-command.md  container_setup.sh  devcontainer.json  host_setup.py  qt-noninteractive.qs
src/: calibrationPage.cpp  calibrationPage.h  customMenuBar.cpp  customMenuBar.h  debugPnPTestPage.cpp  debugPnPTestPage.h  flowControl.cpp  flowControl.h  gui_constants.h  jobsPage.cpp  jobsPage.h  main.cpp  mainwindow.cpp  mainwindow.h  operatorPage.cpp  operatorPage.h  pnpRunner.cpp  pnpRunner.h  settingsPage.cpp  settingsPage.h  sideBar.cpp  sideBar.h
